--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
       }
     </style>
 
+    <link rel="preload" href="https://scripts.converteai.net/d68d5030-61d8-4cbe-a5f5-c32bd85e375d/players/6355f7e5f5fc1e000ba5822d/player.js" as="script">
+<link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
+<link rel="preload" href="https://images.converteai.net/d68d5030-61d8-4cbe-a5f5-c32bd85e375d/players/6355f7e5f5fc1e000ba5822d/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/d68d5030-61d8-4cbe-a5f5-c32bd85e375d/6355f7b840e2a9000cfed0b8/playlist.m3u8" as="fetch">
+<link rel="dns-prefetch" href="https://cdn.converteai.net">
+<link rel="dns-prefetch" href="https://scripts.converteai.net">
+<link rel="dns-prefetch" href="https://images.converteai.net">
+<link rel="dns-prefetch" href="https://api.vturb.com.br">
+
   </head>
   <body>
     
@@ -43,7 +52,7 @@
             <!-- VSL -->
 
             <div id="vid_6355f7e5f5fc1e000ba5822d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6355f7e5f5fc1e000ba5822d" src="https://images.converteai.net/d68d5030-61d8-4cbe-a5f5-c32bd85e375d/players/6355f7e5f5fc1e000ba5822d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6355f7e5f5fc1e000ba5822d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6355f7e5f5fc1e000ba5822d">var s=document.createElement("script");s.src="https://scripts.converteai.net/d68d5030-61d8-4cbe-a5f5-c32bd85e375d/players/6355f7e5f5fc1e000ba5822d/player.js",s.async=!0,document.head.appendChild(s);</script>
-          
+
 
 
             <!-- Botão -->
